[package]
name = "gamlenorge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
kamadak-exif = "0.5.5"
lazy-regex = "*"
lazy_static = "*"
gdal = "*"
serde = { version = "*", features = ["derive", "rc"] }
serde_json = "*"
thiserror = "*"
configparser = "*"
more-config = { version = "*", features = ["ini", "mem", "env", "cmd", "binder"] }
chrono = "*"
geomorph = "*"
sun = "*"
rand = "*"
