[package]
name = "gamlenorge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
lazy-regex = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive", "rc"] }
configparser = "*"
more-config = { version = "*", features = ["ini", "mem", "env", "cmd", "binder"] }
chrono = "*"
geomorph = "*"
sun = "*"
rand = "*"
indicatif = "*"
sdl2 = "0.35"
crossbeam-channel = "*"
hoydedata = { git = "https://github.com/erikoest/hoydedata.git" }
utm = "*"
